# gambia

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile  pom.xml
backend/src/main/java/com/dessima/gambia/: GambiaApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V001__criar_tabelas_iniciais.sql  V002__criar_tabela_usuario.sql
docs/: architecture.md  backend.md  database.md  frontend.md  index.md  infrastructure.md  ml-service.md  roadmap.md  security.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: DemoTool.tsx  FeatureCards.tsx  Footer.tsx  Hero.tsx  Logo.tsx  Navbar.tsx  PrivateRoute.tsx  ScrollToTop.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Cadastrar.tsx  Dashboard.tsx  Historico.tsx  Home.tsx  Login.tsx
frontend/src/services/: api.ts  demo.ts
frontend/src/types/: index.ts
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/otel/: otel-collector-config.yml
infra/prometheus/: prometheus.yml
ml-service/: Dockerfile  pyproject.toml
ml-service/app/: main.py
ml-service/app/api/: classificar.py
ml-service/app/core/: cadeia_fallback.py  classificador.py  heuristica.py  llm_gerador.py
ml-service/app/models/: schemas.py
ml-service/tests/: conftest.py  test_api.py  test_cadeia_fallback.py  test_classificador.py  test_heuristica.py  test_schemas.py
(+34 files in other folders)
